scalalib/src/test/resource/acyclic/src/test/resources/fail/halfpackagecycle/c/package.scala
package fail.halfpackagecycle

package object c {
  import acyclic.pkg
}
